# terminal-apps

./: README.md  ai_assistant.py  ai_developer.py  ai_screenshot.py  ai_translate.py  chatgpt_cli.py  install.sh  project_scanner.py  pyproject.toml  requirements.txt
ai/: __main__.py  chat.py  commit_generator.py  dependency_scanner.py  dev.py  developer.py  english.py  grammar.py  question.py  screenshot.py  session.py  summarize.py  test.py  text.py  translate.py
ai/libs/: chatgpt.py  cli.py  config.py  context.py  context_ai.py  database.py  display.py  llm.py  session.py  system.py
audio/: __main__.py  recorder.py
audio/libs/: recorder.py
dev/: __main__.py  code_scanner.py  sumarize_source_code.py
developer/: __main__.py  project_scanner.py
filekit/: __main__.py  markdown.py
filekit/libs/: commands.py
filesystem/: __main__.py  filesystem.py
libs/: openai.py
scripts/: ai.sh  audio.sh  filekit.sh  mdcat.sh
