[project]
name = "terminal-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.13",
    "numpy>=2.4.4",
    "pydantic>=2.13.1",
    "pyperclip>=1.11.0",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]
